fixed projects section on mobile

--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -1,10 +1,132 @@
+@import '_variables.scss';
+
 .projects_cotainer {
-  height: 100vh;
+  height: auto;
   display: grid;
   grid-template-rows: auto auto;
   padding: 8rem 1rem;
+  overflow: hidden;
 
   .projects_info > div {
     padding: 0 0.5rem;
+  }
+
+  .project_list_cont {
+    margin-top: 6rem;
+    @extend %reset-padding-margin;
+
+    .project_list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      @extend %reset-padding-margin;
+      position: relative;
+      list-style: none;
+
+      li {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: 5rem 0;
+        @extend %reset-padding-margin;
+      }
+    }
+  }
+
+  .project_card {
+    position: relative;
+    @extend %reset-padding-margin;
+    transition: all 0.3s ease;
+    height: 70vw;
+    width: 90%;
+    border: 1px solid $color-less-white;
+
+    border-radius: 0.5rem;
+    transition: all 0.3s ease;
+    justify-content: center;
+
+    .project_content {
+      transition: inherit;
+      @extend %reset-padding-margin;
+      position: relative;
+      display: grid;
+      height: 100%;
+      grid-template-rows: 1fr 1fr 4fr 1fr 1fr;
+
+      padding: 0 1rem;
+      padding-top: 2rem;
+      transform: scale(0.2);
+      .project_type {
+        @extend %reset-padding-margin;
+        color: $color-less-white;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 0.7rem;
+      }
+      .project_title {
+        @extend %reset-padding-margin;
+
+        color: $color-white;
+        font-size: clamp(18px, 3vw, 18px);
+      }
+      .project_decription {
+        color: $color-white-sub;
+        font-size: 0.9rem;
+        height: 50%;
+      }
+
+      .tech_list {
+        justify-self: center;
+        color: $color-white;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 0.8rem;
+      }
+
+      .project_links_list {
+        justify-self: center;
+        display: flex;
+        width: 80%;
+        align-items: center;
+        @extend %reset-padding-margin;
+        .project_link {
+          overflow: hidden;
+          height: 2rem;
+
+          @extend %reset-padding-margin;
+          svg {
+            @extend %reset-padding-margin;
+            height: 1.5rem;
+          }
+        }
+      }
+    }
+
+    img {
+      filter: hue-rotate(188deg) saturate(0.4);
+      transition: all 0.3s ease;
+      position: absolute;
+      bottom: 0;
+      left: 10%;
+      height: 80vw;
+      width: 80%;
+      border-radius: 0.5rem;
+      // opacity: 0;
+    }
+    &:hover {
+      height: 142vw;
+      .project_content {
+        // visibility: visible;
+        transform: scale(1);
+        height: 40vh;
+      }
+      img {
+        height: 60vw;
+        width: 80%;
+        left: 10%;
+        filter: none;
+      }
+    }
   }
 }
